First Commit, Support DuckDB Engine